# gokchat

./: .gitignore  README.md  changelog.md  coreidea.md  design.md  implementationplan.md  package.json  prd.md  spec.md  todo.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/: 1.sql
src-tauri/src/: lib.rs  models.rs  state.rs
src-tauri/src/commands/: chat.rs  keys.rs  mod.rs  models.rs
src-tauri/src/providers/: anthropic.rs  compatible.rs  mod.rs  openai.rs
src-tauri/src/security/: keystore.rs
src/components/: ArtifactView.tsx  ChatView.tsx  ConversationSidebar.tsx  HomeDashboard.tsx  MessageBubble.tsx  ModelSelectorDropdown.tsx  SettingsDialog.tsx
src/lib/: tauri.ts  types.ts
src/stores/: artifactStore.ts  chatStore.ts  settingsStore.ts
