[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.3"
reqwest = { version = "0.13.4", features = ["stream", "json"] }
futures-util = "0.3.32"
keyring = "4.1.2"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }
thiserror = "2.0.18"
tokio-util = "0.7.18"

[profile.dev]
debug = false        # Disables debug symbols, saving gigabytes of target directory size (ROM)
incremental = false  # Disables incremental compiler cache, saving disk space

[profile.release]
opt-level = "z"      # Optimize for smallest binary size
strip = true         # Strip symbols and debug info from final binary
lto = "thin"         # Size optimization using thin Link-Time Optimization (saves RAM/Time over full LTO)
codegen-units = 1    # Reduces compilation codegen units to 1 for smaller binary size

[workspace]
